newcomers to quickly generate firmware images without the need to install any local toolchain. +
This is a beta version and we count on the community to help us refine it. +
The generated images, together with some other info (build options used, error/warning reports, ...) are made available for download and are also stored in the user's area. 
Most of the current build and configuration options can be defined and stored as a named "build". Builds are automatically stored in the user's area and can be reused (for config variations and new builds). Users can upload and store files (Lua sources or compiled programs, modules, ...) in their user's areas too. These can be optionally included in each build 
by simply checking boxes on the build configuration. +
There are some "?" icons with help and instructions for each section. Please let us know if they are clear enough or send us new texts and we'll be glad to add it. We hope to find 
some time to make a tutorial for the wiki too. +
The eLua version currently built by the Web Builder is v0.7, the latest officially released version. Again, if anybody needs a more recent (trunk) version, please ask us and 
we'll be glad to build and send one. +
The eLua Web Builder is (and will always be) free to use and is already online at http://builder.eluaproject.net +
The builder code is a work of Vagner Nascimento, Carlos Eduardo Deodoro and is currently maintained in a Subversion repository at `svn://svn.giga.puc-rio.br/elua_builder`.

March 24th, 2010
~~~~~~~~~~~~~~~~
.eLua User Labs launch
We're proud to announce the launch of a new cummnity site, the http://wiki.eluaproject.net[eLua User Labs].This Wiki-based site provides a centralized area where users can share
project code, documentation and media.  This site also contains official code examples, tutorials, FAQs (Frequently Asked Questions) and other goodies maintained by project members. 