@@ -16,3 +16,58 @@ emphasizedwords=
 strongwords=eLua
 monospacedwords=
 
+# Colored table cells
+# o: white background, orange text color
+# g: gray background, black text color, bold text
+[tabledef-default]
+orange-style=tags="orange"
+graybg-style=tags="graybg"
+
+[tabletags-orange]
+bodydata=<td style="color: rgb(255, 102, 0)">|</td>
+
+[tabletags-graybg]
+bodydata=<td style="background-color: silver; font-weight: bold;">|</td>
+
+[replacements]
+# Status images
+_sok=image:images/stat_ok.png[Status: OK]
+_sni=image:images/stat_not_implemented.png[Status: not implemented]
+_snt=image:images/stat_not_tested.png[Status: testing]
+_sna=image:images/stat_not_applicable.png[Status: not applicable]
+
+# 'Lazy text' (automatic formatting of text color with simple patterns)
+@o_(\S+)=<font style="color: rgb(255, 102, 0);">\1</font>
+
+# CPUs 
+_LM3S8962=http://www.luminarymicro.com/products/LM3S8962.html[LM3S8962]
+_LM3S6965=http://www.luminarymicro.com/products/lm3s6965.html[LM3S6965]
+_LM3S6918=http://www.luminarymicro.com/products/lm3s6918.html[LM3S6918]
+_LM3S9B92=http://www.luminarymicro.com/products/lm3s6918.html[LM3S9B92]
+_AT32UC3A0512=http://www.atmel.com/dyn/products/product_card.asp?part_id=4117[AT32UC3A0512]
+_AT91SAM7X256=http://www.atmel.com/dyn/products/Product_card.asp?part_id=3755[AT91SAM7X256]
+_AT91SAM7X512=http://www.atmel.com/dyn/products/Product_card.asp?part_id=4104[AT91SAM7X512]
+_LPC2468=http://www.nxp.com/#/pip/pip=%5Bpip=LPC2468_4%5D|pp=%5Bt=pip,i=LPC2468_4%5D[LPC2468]
+_LPC2888=http://www.standardics.nxp.com/microcontrollers/to/pip/LPC2880FET180.html[LPC2888]
+_STR711FR2=http://www.st.com/mcu/devicedocs-STR711FR2.html[STR711FR2]
+_STR912FAW44=http://www.st.com/mcu/devicedocs-STR912FAW44-101.html[STR912FAW44]
+_STM32F103ZE=http://www.st.com/mcu/devicedocs-STM32F103ZE-110.html[STM32F103ZE]
+_STM32F103RE=http://www.st.com/mcu/devicedocs-STM32F103RE-110.html[STM32F103RE]
+_i386=http://www.intel.com/[i386]
+_LPC1768=http://www.nxp.com/#/pip/pip=%5Bpip=LPC1769_68_67_66_65_64_63%5D|pp=%5Bt=pip,i=LPC1769_68_67_66_65_64_63%5D[LPC1768]
+
+# Boards
+_EK-LM3S8962=http://www.luminarymicro.com/products/lm3s8962_can_ethernet_evaluation_kit.html[EK-LM3S8962]
+_EK-LM3S6965=http://www.luminarymicro.com/products/lm3s6965_ethernet_evaluation_kit.html[EK-LM3S6965]
+_Eagle-100=http://www.micromint.com/index.php/SBC/eagle-100.html[Eagle 100]
+_EK-LM3S9B92=http://www.luminarymicro.com/products/ek-lm3s9b92.html[EK-LM3S9B92]
+_ATEVK1100=http://www.atmel.com/dyn/Products/tools_card.asp?tool_id=4114[ATEVK1100]
+_SAM7-EX256=http://www.olimex.com/dev/sam7-ex256.html[SAM7-EX256]
+_PUC-RioDemo=http://www.giga.puc-rio.br/site/embedded/eluademoboard[PUC-Rio Demo]
+_LPC-H2888=http://www.olimex.com/dev/lpc-h2888.html[LPC-H2888]
+_MOD711=http://www.sctec.com.br/content/view/101/30/[MOD711]
+_STR9-comStick=http://www.hitex.com/index.php?id=383[STR9-comStick]
+_STR-E912=http://www.olimex.com/dev/str-e912.html[STR-E912]
+_STM3210E-EVAL=http://www.st.com/mcu/contentid-100-110-STM3210E_EVAL.html[STM3210E-EVAL]
+_ET-STM32Stamp=http://www.futurlec.com/ET-STM32_Stamp.shtml[ET-STM32 Stamp]
+_mbed=http://mbed.org/[mbed]
